k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expensy-ingress
  namespace: expensy
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: expensy-frontend
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: expensy-backend
            port:
              number: 8080
